feat:update landing page with personal details
described an area of interest

issue #2

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <nav>
-    <ul>
+    <ul style="list-style: none; padding: 0; display: flex; gap: 20px;">
       <li><a href="index.html" class="active">Home</a></li>
       <li><a href="about.html">About Me</a></li>
       <li><a href="projects.html">Projects</a></li>
@@ -17,9 +17,12 @@
   </nav>
 
   <header>
-    <h1>Welcome to My Portfolio</h1>
+    <h1 style="color:brown;">Welcome to My Portfolio</h1>
     <p>This is the homepage where I introduce myself and showcase my skills and achievements.</p>
+    <img src="images/profile.jpg" alt="Profile Image" width="200" height="200" style="border-radius: 50%; display: block; margin: 20px auto;" />
   </header>
-
+  <footer style="text-align: center; margin-top: 40px; padding: 20px 0; background: #f5f5f5;">
+    © 2025 My Portfolio.
+  </footer>
 </body>
 </html>
