add details about me
issue #3

--- a/about.html
+++ b/about.html
@@ -18,9 +18,25 @@
 
   <section>
     <h1>About Me</h1>
-    <p>A brief introduction about myself, my background, skills, and passions.</p>
-    <!-- Students can add more personal details here -->
+    <div style="display: flex; align-items: flex-start; gap: 20px;">
+      <img src="images/profile.jpg" alt="Profile photo of Victor Kipngetich" style="width:150px; height:auto; border-radius:8px;">
+      <div>
+    <p>My name is Victor Kipngetich. I am a computer science student. My interest in computer science comes from curiousity of how computers work. I am passionate about programming, web development and machine learning.</p>
+    <p>Here are some of the skills and technologies I work with:</p>
+    <ul style="margin-top: 0.5em; margin-bottom: 1em; padding-left: 20px;">
+      <li>Python</li>
+      <li>JavaScript</li>
+      <li>React</li>
+      <li>HTML & CSS</li>
+      <li>Git & GitHub</li>
+    </ul>
+      <p>Beyond my technical side, I also enjoy reading and watching Formula 1 races. I aim to be a full-stack developer with a focus on 
+        integration of AI in solving people's problems.
+      </p>
+      </div>
+    </div>
   </section>
+   
 
 </body>
 </html>
