--- a/projects.html
+++ b/projects.html
@@ -20,9 +20,14 @@
     <h1>Projects</h1>
     <p>List of projects with descriptions. Students can add/edit/remove project entries here.</p>
     <ul>
-      <li>Project 1 - Description</li>
-      <li>Project 2 - Description</li>
-      <li>Project 3 - Description</li>
+      <li>Price Forecasting and Purchase Recommendation in Ecommerce - A web application that allows buyers to monitor price trend of various products</li>
+      <br>
+      <li>Nairoute - A web-based travel application for public transport within Nairobi</li>
+      <br>
+      <li>HoneyMeds - An online 'hospital' where patients can contact their doctor. The doctor can also prescribe
+        medication through a pharmacy within the web application.
+      </li>
+      
     </ul>
   </section>
 
