--- a/contact.html
+++ b/contact.html
@@ -18,19 +18,19 @@
 
   <section>
     <h1>Contact Me</h1>
-    <form id="contact-form" method="post" action="#">
+    <form id="contact-form" action="https://formspree.io/f/xblkvgky" method="POST">
       <label for="name">Name:</label><br />
-      <input type="text" id="name" name="name" required /><br />
+      <input type="text" id="name" name="name" placeholder="Your name" required /><br />
 
       <label for="email">Email:</label><br />
-      <input type="email" id="email" name="email" required /><br />
+      <input type="email" id="email" name="email" placeholder="Your email" required /><br />
 
       <label for="message">Message:</label><br />
-      <textarea id="message" name="message" rows="5" required></textarea><br />
+      <textarea id="message" name="message" rows="5" placeholder = "Type your message" required></textarea><br />
 
       <button type="submit">Send</button>
     </form>
-    <p>integrate EmailJS, Formspree, or other APIs for the form functionality.</p>
+     
   </section>
 
 </body>
