--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,10 @@
     </form>
      
   </section>
+  <footer style="text-align: center; margin-top: 40px; padding: 20px 0; background: #f5f5f5;">
+    <h2>Contact me:</h2>
+    <p>vicklan132@gmail.com</p>
+  </footer>
 
 </body>
 </html>
