feat: Update project description
shorten project description to use only title

issue #5

--- a/projects.html
+++ b/projects.html
@@ -20,12 +20,12 @@
     <h1>Projects</h1>
     <p>List of projects with descriptions. Students can add/edit/remove project entries here.</p>
     <ul>
-      <li>Price Forecasting and Purchase Recommendation in Ecommerce - A web application that allows buyers to monitor price trend of various products</li>
+      <li>EcommerceAI</li>
       <br>
-      <li>Nairoute - A web-based travel application for public transport within Nairobi</li>
+      <li>Nairoute</li>
       <br>
-      <li>HoneyMeds - An online 'hospital' where patients can contact their doctor. The doctor can also prescribe
-        medication through a pharmacy within the web application.
+      <li>HoneyMeds
+        Online Hospital
       </li>
       
     </ul>
